# OpalRender

./: CMakeLists.txt  LICENSE
include/: OpalGlfwWindow.hpp  OpalRenderer.hpp  OpalWindow.hpp
src/: OpalGlfwWindow.cpp  OpalRenderer.cpp  OpalWindow.cpp
